<resources>
    <string name="app_name">24seven</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Категория</string>
    <string name="title_cart">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="title_newProducts">Новые товары</string>
    <string name="title_myFavourites">Избранное</string>
    <string name="view_all">Посмотреть все</string>
    <string name="warning_fill_the_fields">Укажите</string>
    <string name="warning_region" translatable="false">Укажите Регион</string>
    <string name="popular_items">ПОПУЛЯРНЫЕ ТОВАРЫ</string>
    <string name="on_sale_items">СКИДКИ</string>
    <string name="new_items">Новые товары</string>
    <string name="sales_leaders">Лидер продаж</string>
    <string name="leave_feedback"><u>Оставить отзыв</u></string>
    <string name="feedbacks">Отзывы</string>
    <string name="similar_products">Похожие товары</string>
    <string name="news">Новости и акции</string>
    <string name="total">Итого:</string>
    <string name="check_out">Оформить заказ</string>
    <string name="choose_subCategory">Выберите подкатегорию</string>
    <string name="sort">Сортировать по</string>
    <string name="filter">Фильтр</string>
    <string name="barcodescannerborder">barcodescannerborder</string>
    <string name="barcodescannerbordersecond">barcodescannerbordersecond</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="give_address">Адрес доставки:</string>
    <string name="phone_number">Номер телефона*</string>
    <string name="extra_phone_number">Доп. номер телефона*</string>
    <string name="address">Адрес*</string>
    <string name="district">Район*</string>
    <string name="region" translatable="false">Регион*</string>
    <string name="city">Город*</string>
    <string name="from_map">На карте</string>
    <string name="payment_method">Выберите способ оплаты:</string>
    <string name="payme">PayMe</string>
    <string name="click">Click</string>
    <string name="cash">Наличными</string>
    <string name="order_price">Заказ:</string>
    <string name="delivery_price">Доставка:</string>
    <string name="confirm_order">ПОДТВЕРДИТЬ ЗАКАЗ</string>
    <string name="done">Готово</string>
    <string name="reset">Сбросить фильтр</string>
    <string name="share">Поделиться:</string>
    <string name="other_news">Другие новости</string>
    <string name="show_on_map"><u>Показать на карте</u></string>
    <string name="save_address">Сохранить адрес</string>
    <string name="address_name">Название*</string>
    <string name="add_address">+ Добавить новый адрес</string>
    <string name="delete_address"><u>Удалить адрес</u></string>
    <string name="order_info">Информация о заказе</string>
    <string name="order_number">Заказ №%d</string>
    <string name="order_time">Время заказа:</string>
    <string name="order_item_count">Количество:</string>
    <string name="order_address">Адрес доставки:</string>
    <string name="payment_Method">Способ оплаты:</string>
    <string name="order_total">Итоговая цена:</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="save">Сохранить</string>
    <string name="add_card">Добавить карту</string>
    <string name="add_card2">Добавить платежную карту</string>
    <string name="my_orders">История заказов</string>
    <string name="favourite">Избранные товары</string>
    <string name="my_addresses">Мои адреса</string>
    <string name="my_pay_method">Платежные карты</string>
    <string name="name">ФИО</string>
    <string name="personal_info">Персональные данные</string>
    <string name="fio">ФИО*</string>
    <string name="dob">Дата рождения*</string>
    <string name="gender">Пол*</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="change_password">Сменить пароль</string>
    <string name="change_language">Язык</string>
    <string name="change_region">Сменить регион</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="set_as_default">Использовать как способ оплаты по умолчанию</string>
    <string name="edit">Изменить</string>
    <string name="in_wait">В ожидании</string>
    <string name="active">Активные</string>
    <string name="delivered">Доставлен</string>
    <string name="more">Подробно</string>
    <string name="total_price">Общая стоимость:</string>
    <string name="money_format_sum_unit">%1$,d сум</string>
    <string name="money_format_coin_unit" translatable="false">%1$,d coin</string>
    <string name="count_with_unit" translatable="false" />
    <string name="money_format_sum">%,d сум</string>
    <string name="money_format_sum_unit_two_lines">%1$,d сум</string>
    <string name="comments_count">Отзывы (%d)</string>
    <string name="discount">-%d%%</string>
    <string name="money_format_sum_string">%s сум</string>
    <string name="count_with_unit_">Количество: %d %s</string>
    <string name="no_connectivity_exception">"Нет связи с сервером. \nВозможно отключена сеть!"</string>
    <string name="no_connection">Нет соединения!</string>
    <string name="no_connection_try_again">Пожалуйста, проверьте ваше интернет \n попробуйте еще раз</string>
    <string name="try_again">Попробуйте еще раз</string>
    <string name="jan">Января</string>
    <string name="feb">Февраля</string>
    <string name="mar">Марта</string>
    <string name="apr">Апреля</string>
    <string name="may">Мая</string>
    <string name="jun">Июня</string>
    <string name="jul">Июля</string>
    <string name="avg">Августа</string>
    <string name="sep">Сентября</string>
    <string name="oct">Октября</string>
    <string name="nov">Ноября</string>
    <string name="dev">Декабря</string>
    <string name="title_activity_auth">Авторизация</string>
    <string name="user_guide">Инструкция пользователя</string>
    <string name="send_code_again"><u>Отправить код еще раз</u></string>
    <string name="logout">Выйти</string>
    <string name="phone_format" translatable="false">+%d</string>
    <string name="full_name_format" translatable="false">%s %s</string>
    <string name="dob_format" translatable="false">%d %s %d</string>
    <string name="order_count">%d заказов</string>
    <string name="address_count">%d адреса</string>
    <string name="items_count">%d товаров</string>
    <string name="settings_options">Персональные данные</string>
    <string name="pls_your_comments">Пожалуйста поделитесь своим мнением о продукте</string>
    <string name="your_comments">Ваши отзыв</string>
    <string name="leave_comment">ОТПРАВИТЬ ОТЗЫВ</string>
    <string name="saved_addresses">Сохраненные адреса</string>
    <string name="no_orders">No Orders</string>
    <string name="no_order">Нет заказов!</string>
    <string name="go_shopping">Вы еще не заказывали товар! Нажмите кнопку ниже и закажите товар</string>
    <string name="start_shopping">НАЧАТЬ ПОКУПКУ</string>
    <string name="search">Поиск</string>
    <string name="sort_by">Сортировать по</string>
    <string name="sort_by_new">Новейшие</string>
    <string name="sort_by_popular">Популярный</string>
    <string name="sort_by_cheap">Цена: от самой низкой к высокой</string>
    <string name="sort_by_expensive">Цена: от самой высокой к самой низкой</string>
    <string name="add_to_cart">в корзину</string>
    <string name="in_cart">В корзине</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="select_address">Выберите адрес</string>
    <string name="detecting_address">detecting address</string>
    <string name="warning_enable_permission">enable_permission</string>
    <string name="any">Любые</string>
    <string name="transfer">Оплата картой</string>
    <string name="characteristics">Характеристики продукта</string>
    <string name="plus" translatable="false">+</string>
    <string name="delete" translatable="false">x</string>
    <string name="success">success</string>
    <string name="tour_comment_in_review">your comment in review</string>
    <string name="somethign_went_wrong">Что-то пошло не так.</string>
    <string name="no_addresses">no addresses</string>
    <string name="loading_error">Loading Error</string>
    <string name="error_name">name</string>
    <string name="error_last_name">lastname</string>
    <string name="error_year">year</string>
    <string name="error_month">month</string>
    <string name="error_day">day</string>
    <string name="speak_to_text">Speak to text</string>
    <string name="app_not_installed">App not Installed</string>
    <string name="n_n">Для продолжения покупки\n пожалуйста авторизуйтесь\n через номер телефона</string>
    <string name="input_phone">Введите пожалуйста номер телефона</string>
    <string name="input_code">Введите код-подтверждения</string>
    <string name="get_number">получить код</string>
    <string name="restart_code">Отправить код-подтверждения снова</string>
    <string name="get_code">Далее</string>
    <string name="russian">Русский</string>
    <string name="uzbek">Узбекский</string>
    <string name="cant_find_location">Не можем определить ваш адрес по карте</string>
    <string name="city_street_apt">Город, улица, дом</string>
    <string name="balance_">Balance: %d</string>
    <string name="out_of_stock">Нет в наличии</string>
    <string name="chose_address">Выберите адрес На карте</string>
    <string name="canceled">Отменен</string>
    <string name="empty_cart">Вы еще ничего не смотрели</string>
    <string name="statistics">Статистика</string>
    <string name="profile_title">Профиль</string>
    <string name="null__">.......................................................................................................................</string>
    <string name="profile_name_lastName">Введите ФИО</string>
    <string name="profile_phone_title">Введите номер телефона</string>
    <string name="profile_inn_title">Введите ИНН</string>
    <string name="inn">ИНН</string>
    <string name="profile_bornDate_title">Введите дату рождения</string>
    <string name="day_month_year">дд/мм/гггг</string>
    <string name="update">Сохранить</string>
    <string name="deliveryType_title">Выберите способ доставки:</string>
    <string name="delivery">Доставка</string>
    <string name="physical_person">физ.лицо</string>
    <string name="legal_entity">юрид.лицо</string>
    <string name="pickup">Самовывоз</string>
    <string name="phoneNumber_title">Укажите номер получателя:</string>
    <string name="priceType_title">Тип оплаты</string>
    <string name="delivery_title">Доставка</string>
    <string name="totalPrice_title">Итого</string>
    <string name="checkout">Оплатить заказ</string>
    <string name="select_language">Выбрать язык</string>
    <string name="confirmation">Подтвердить</string>
    <string name="call_notification_channel_id" translatable="false">101</string>
    <string name="policy"><u>Инструкция пользователя</u></string>
    <string name="name_lastname">Фамилия и имя</string>
    <string name="singIn_company_name_title">Введите наименование компании</string>
    <string name="company_name_editText">Название компании</string>
</resources>