<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".ui.auth.singIn.SingInActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/singInType_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4">

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp">

            <RadioButton
                android:id="@+id/singIn_switch_1"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/check_out_button"
                android:button="@color/transparent"
                android:fontFamily="@font/golos_text_medium"
                android:gravity="center"
                android:paddingHorizontal="7dp"
                android:text="@string/physical_person"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/singIn_switch_2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="1dp"
                android:button="@color/transparent"
                android:fontFamily="@font/golos_text_medium"
                android:gravity="center"
                android:paddingHorizontal="7dp"
                android:text="@string/legal_entity"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/singIn_nameLastname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:text="@string/profile_name_lastName"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singInType_card" />

    <EditText
        android:id="@+id/name_lastname_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profile_setting_edittext"
        android:hint="@string/name_lastname"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singIn_nameLastname_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/profile_bornDate_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_lastname_editText" />

    <EditText
        android:id="@+id/bornDate_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profile_setting_edittext"
        android:hint="@string/day_month_year"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/INN_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profile_setting_edittext"
        android:hint="@string/inn"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/singIn_company_name_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/INN_editText" />

    <EditText
        android:id="@+id/companyNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profile_setting_edittext"
        android:hint="@string/company_name_editText"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <TextView
        android:id="@+id/singIn_getCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/checkout_button_back"
        android:fontFamily="@font/golos_text_medium"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/get_code"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>